policies/run-as-nonroot-pod.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-run-as-nonroot-pod
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        has(object.spec.securityContext) &&
        has(object.spec.securityContext.runAsNonRoot) &&
        object.spec.securityContext.runAsNonRoot == true
      message: >
        spec.securityContext.runAsNonRoot must be set to true. Container-level fields may be undefined/nil when this is true.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-warn
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/run-as-nonroot-pod
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-warn
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: run-as-nonroot-pod.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-audit
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/run-as-nonroot-pod
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-audit
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: run-as-nonroot-pod.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optout-deny
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/run-as-nonroot-pod
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-run-as-nonroot-pod-namespace-optin-deny
spec:
  policyName: check-run-as-nonroot-pod
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: run-as-nonroot-pod.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
